--- a/web/concrete/css/ccm_app/header.less
+++ b/web/concrete/css/ccm_app/header.less
@@ -110,7 +110,7 @@ div#ccm-quick-nav ul li {
 div#ccm-quick-nav ul#ccm-quick-nav-breadcrumb {
 	position: absolute; top: 8px; right: 10px; margin: 0px; padding: 0px;
 	.divider {
-	padding: 0 5px;
+	padding: 0 5px 0 8px;
 	color: #9FBCCF;
 	}
 }
